chore: codecov components feature (#7204)
* feat: adds seperate tests per directory

* fix: changes component name

* fix: updates path

* fix: update path

* chore: test if it works

* fix: skips tests for testing

* fix: tearsheet test

* feat: uploads web component reports

* fix: updates codecov action version

* feat: tries directory input

* chore: checks to see if files input works

* chore: removes file inputs

* chore: removes test to check if works

* chore: moved codecov yaml

* feat: adds new action for codecov upload

* Revert "feat: adds new action for codecov upload"

This reverts commit 8f7e4683ba0e170070ff37e9552301090184d520.

* fix: re adds tests

* chore: revert ci.yml to fix build issues

* feat: pushes web components test coverage

* fix: typo

* Update .github/workflows/ci.yml

Co-authored-by: elysia <elysia.hwang@gmail.com>

* Update .github/workflows/ci.yml

Co-authored-by: elysia <elysia.hwang@gmail.com>

* chore: moves codecov.yml into .github dir

* feat: makes codecov non-blocking

* fix: codecov.yml format

* chore: codecov.yml format

---------

Co-authored-by: elysia <elysia.hwang@gmail.com>

--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -12,19 +12,17 @@ comment:
   layout: 'header, diff, flags, components'
 
 component_management:
-  default_rules:
+  default_rules: # default rules that will be inherited by all components
     statuses:
-      - type: project
+      - type: project # in this case every component that doesn't have a status defined will have a project type one
         target: auto
         threshold: 1%
-        branches:
-          - '!main'
   individual_components:
-    - component_id: ibm-products
-      name: ibm-products
+    - component_id: ibm-products # this is an identifier that should not be changed
+      name: ibm-products # this is a display name, and can be changed freely
       paths:
-        - ../packages/ibm-products/**
-    - component_id: ibm-products-web-components
-      name: ibm-products-web-components
+        - packages/ibm-products/**
+    - component_id: ibm-products-web-components # this is an identifier that should not be changed
+      name: ibm-products-web-components # this is a display name, and can be changed freely
       paths:
-        - ../packages/ibm-products-web-components/**
+        - packages/ibm-products-web-components/**
