--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,14 +111,15 @@ jobs:
           key: test-c4p-modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
       - name: Install
         run: yarn
+      - name: CI snapshot tests for c4p
+        run: yarn ci-check:test:c4p:snapshot
       - name: CI tests for c4p
         run: yarn ci-check:test:c4p --collectCoverage
       - name: Upload coverage reports to Codecov with GitHub Action
-        uses: codecov/codecov-action@e28ff129e5465c2c0dcc6f003fc735cb6ae0c673 # v4.5.0
+        uses: codecov/codecov-action@0565863a31f2c772f9f0395002a31e3f06189574 # v5.4.0
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-      - name: CI snapshot tests for c4p
-        run: yarn ci-check:test:c4p:snapshot
+
   test-c4p-wc:
     runs-on: ubuntu-latest
     steps:
@@ -143,7 +144,11 @@ jobs:
       - name: Build web-components project
         run: yarn build:packages
       - name: CI tests for products web components
-        run: yarn ci-check:test:c4p-wc
+        run: yarn ci-check:test:c4p-wc --coverage
+      - name: Upload coverage reports to Codecov with GitHub Action
+        uses: codecov/codecov-action@0565863a31f2c772f9f0395002a31e3f06189574 # v5.4.0
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   avt-runner:
     strategy:
