test(side-panel): add test coverage (#7002)
* refactor(useFocus): refactor repeated useEffect code

* test(side-panel): implement test case for placement

* test: import index file

* fix: resolve test config errors

* fix: resovle test config errros

* test(side-panel): cover overlay click

* test(side-panel): cover right side version

* test(side-panel): test escape keydown

* test(side-panel): test close button click

* test(side-panel): test the initial focus

* test(side-panel): test slug

* test(side-panel): test the nav back method

* chore(side-panel.test): remove unwanted comments

* chore: remove actionSet style import

* chore: revert actionSet style import

* chore: style import

* chore: style import

* chore: style import

* fix: resolve styles issue in tests

* fix: resolve styles issue in tests

* fix: resolve wc test issue

* fix: resolve wc test issue

* fix: resolve wc test issue

* fix: resolve wc test issue

* fix: resolve wc test issue

* fix: resolve wc test issue

* fix: include .scss

* fix: include .scss

* fix: direct import css

* fix: direct import css

* fix: avoid import from stories

* fix: import index of component

* test: change file to js

* test: change file to js

* test: revert all changes

* test: revert previous changes

* test: revert previous changes

* test: revert previous changes

* test: revert previous changes

* test: fix test error

* test: change test script to build

* test: revert previous change

* test: change import

* test: change exclude

* test: remove index from style

* fix: change exclusion

* test: revert previous changes

* test: revert previous changes

* test: change build target

* test: change vite config

* fix: yarn lock

* fix: yarn lock

* fix: change vite config

* fix: change vite config

* fix: change vite config

* fix: ts ingore

* fix: ts ingore

* fix: ts ingore

* fix: config change

* fix: config change

* fix: config change

* test: change vite config

* test: change vite config

* fix

--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -98,6 +98,7 @@
     "tslib": "^2.8.1",
     "typescript": "^5.5.3",
     "vite": "^6.0.3",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.1",
     "web-component-analyzer": "2.0.0"
   }
