--- a/.github/workflows/create-release-tag-and-pr.yml
+++ b/.github/workflows/create-release-tag-and-pr.yml
@@ -89,7 +89,7 @@ jobs:
         with:
           fetch-depth: '0'
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # 4.2.3
         with:
           node-version: '20.x'
           registry-url: https://registry.npmjs.org
