--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -19,7 +19,7 @@ jobs:
           ref: ${{ github.event.client_payload.branch }}
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # 4.2.3
         with:
           node-version: '20.x'
           registry-url: https://registry.npmjs.org
