--- a/.github/workflows/release-base.yml
+++ b/.github/workflows/release-base.yml
@@ -41,7 +41,7 @@ jobs:
           git config --global user.name ${{ secrets.CARBON_BOT_NAME }}
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # 4.2.3
         with:
           node-version: '20.x'
           registry-url: https://registry.npmjs.org
