--- a/.github/workflows/release-v1.yml
+++ b/.github/workflows/release-v1.yml
@@ -25,7 +25,7 @@ jobs:
           git config user.name $GITHUB_ACTOR
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4 # https://github.com/actions/setup-node
+        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # 4.2.3 # https://github.com/actions/setup-node
         with:
           node-version: '20.x'
           registry-url: https://registry.npmjs.org
@@ -66,7 +66,10 @@ jobs:
           'this.name="@carbon/ibm-cloud-cognitive"'
 
       - name: Update telemetry.yml project ID for legacy publish
-        run: sed -i -e s/495342db-5046-4ecf-85ea-9ffceb6f8cdf/9255f6e1-1b25-4ef4-8913-062ef88935c9/ packages/ibm-products/telemetry.yml
+        run:
+          sed -i -e
+          s/495342db-5046-4ecf-85ea-9ffceb6f8cdf/9255f6e1-1b25-4ef4-8913-062ef88935c9/
+          packages/ibm-products/telemetry.yml
 
       # Run yarn again after renaming package, required after move to yarn berry
       - name: Install after rename
