--- a/.github/workflows/release-canary.yml
+++ b/.github/workflows/release-canary.yml
@@ -29,7 +29,7 @@ jobs:
           git config user.name $GITHUB_ACTOR
 
       - name: Setup Node.js
-        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # 4.2.3
+        uses: actions/setup-node@cdca7365b2dadb8aad0a33bc7601856ffabcc48e # v4.3.0
         with:
           node-version: '20.x'
           registry-url: https://registry.npmjs.org
