--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -189,6 +189,8 @@ jobs:
 
   vrt-runner:
     runs-on: ubuntu-latest
+    env:
+      PERCY_TOKEN: ${{ secrets.PERCY_TOKEN_IBM_PRODUCTS }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -204,11 +206,10 @@ jobs:
       - name: Build project
         run: yarn build
       - name: Run VRT
-        env:
-          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN_IBM_PRODUCTS }}
         if:
-          ${{ github.repository == 'carbon-design-system/ibm-products' &&
-          github.event.pull_request.draft == false }}
+          ${{ env.PERCY_TOKEN != '' && github.repository ==
+          'carbon-design-system/ibm-products' && github.event.pull_request.draft
+          == false }}
         working-directory: packages/core
         run: yarn percy storybook storybook-static
 
