chore:  vrt runner 3

--- a/.github/workflows/run-vrt.yml
+++ b/.github/workflows/run-vrt.yml
@@ -14,6 +14,8 @@ on:
 
 jobs:
   vrt-runner:
+    if: |
+      github.event.comment.body == '/run-vrt'
     runs-on: ubuntu-latest
     env:
       PERCY_TOKEN: ${{ secrets.PERCY_TOKEN_IBM_PRODUCTS }}
