--- a/.github/workflows/run-vrt.yml
+++ b/.github/workflows/run-vrt.yml
@@ -1,16 +1,10 @@
 name: Visual Regression Testing
 
 on:
-    pull_request:
-      branches:
-        - main
-        - v1
-        - 'percySnapshot'
-        - 'release\/v2**'
-    issue_comment:
-        types: [created]    
-
-  
+  pull_request_target:
+    types: [opened, closed, synchronize]
+  issue_comment:
+    types: [created]
 
 jobs:
   vrt-runner:
