--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "generate": "lerna run generate --loglevel success --scope \"@carbon/ibm-products\" --",
     "lint": "run-p -s 'lint:*'",
     "lint:license": "scripts/check-license.cjs -a",
-    "lint:license:staged": "scripts/check-license.cjs",
+    "lint:license:staged": "scripts/check-license.cjs -w",
     "lint:js": "eslint packages --fix",
     "lint:styles": "stylelint '**/*.scss' --fix",
     "prepare": "husky install",
@@ -138,7 +138,7 @@
       "npx prettier --cache --write",
       "npx eslint --fix",
       "npx cspell --no-must-find-files",
-      "yarn lint:license:staged"
+      "bash -c 'yarn lint:license:staged'"
     ],
     "**/*.scss": [
       "npx prettier --cache --write",
@@ -147,9 +147,9 @@
     "!(examples/**/*).md": [
       "npx prettier --cache --write",
       "npx cspell --no-must-find-files",
-      "yarn lint:license:staged"
+      "bash -c 'yarn lint:license:staged'"
     ]
-  },
+},
   "dependencies": {
     "stylelint-plugin-carbon-tokens": "^3.2.3",
     "stylelint-use-logical": "^2.1.2"
