chore: dowgrades @babel/runtime to 7.26.10

--- a/package.json
+++ b/package.json
@@ -131,7 +131,8 @@
     "cross-spawn": "7.0.6",
     "micromatch": "4.0.8",
     "semver": "7.7.1",
-    "ws": "^8.17.1"
+    "ws": "^8.17.1",
+    "@babel/runtime": "7.26.10"
   },
   "lint-staged": {
     "!(examples/**/*)**/*.{js,jsx,ts,tsx,mjs}": [
