--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -17,7 +17,7 @@ jobs:
     if: github.repository == 'carbon-design-system/ibm-products'
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: '0'
           ref: ${{ github.event.client_payload.branch }}
