--- a/.github/workflows/test-example-upgrade.yml
+++ b/.github/workflows/test-example-upgrade.yml
@@ -23,7 +23,7 @@ jobs:
           git config user.name $GITHUB_ACTOR
 
       - name: Setup Node.js
-        uses: actions/setup-node@cdca7365b2dadb8aad0a33bc7601856ffabcc48e # v4.3.0 # https://github.com/actions/setup-node
+        uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
           node-version: '20.x'
           registry-url: https://registry.npmjs.org
