--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,6 +35,7 @@
     "@carbon/react": "^1.76.0",
     "@carbon/themes": "^11.46.0",
     "@carbon/type": "^11.35.0",
+    "@carbon/utilities-react": "0.7.0",
     "@percy/cli": "^1.30.7",
     "@percy/storybook": "^6.0.3",
     "@storybook/addon-a11y": "^8.6.12",
