--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -114,6 +114,7 @@
     "@carbon/react": "^1.76.0",
     "@carbon/themes": "^11.46.0",
     "@carbon/type": "^11.35.0",
+    "@carbon/utilities-react": "0.7.0",
     "react": "^16.8.6 || ^17.0.1 || ^18.2.0 || ^19.0.0",
     "react-dom": "^16.8.6 || ^17.0.1 || ^18.2.0 || ^19.0.0"
   }
