fix: renovate no longer works on the weekends

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -12,11 +12,7 @@
     // https://docs.renovatebot.com/presets-npm/#npmunpublishsafe
     'npm:unpublishSafe',
   ],
-  schedule: [
-    'after 10pm every weekday',
-    'before 5am every weekday',
-    'every weekend',
-  ],
+  schedule: ['after 10pm every weekday', 'before 5am every weekday'],
   vulnerabilityAlerts: {
     enabled: true,
   },
