chore: move products storybook config from core to products

--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -43,13 +43,18 @@
   "scripts": {
     "build": "run-s clean build-all",
     "build-all": "run-p 'build:*'",
+    "build:carbon": "sass -q --quiet-deps --style=expanded --load-path ./node_modules --load-path ../../node_modules --load-path node_modules .storybook/carbon.scss:css/carbon.css",
     "build:css": "copyfiles '../ibm-products-styles/css/**/*.*' ./ -u 2",
     "build:scss": "copyfiles '../ibm-products-styles/scss/**/*.*' ./ -u 2",
+    "build:storybook": "yarn dlx cross-env \"NODE_OPTIONS=--max_old_space_size=8192\" && storybook build --quiet",
     "build:js-new": "node scripts/build",
     "ci-check": "node scripts/import",
     "clean": "rimraf es lib css scss",
     "generate": "cross-env FORCE_COLOR=1 node scripts/generate",
     "postinstall": "ibmtelemetry --config=telemetry.yml",
+    "start": "run-s build:carbon storybook:start",
+    "storybook:build": "run-s build:carbon build:storybook",
+    "storybook:start": "storybook dev ./public -p 3000",
     "telemetry-config": "ibmtelemetry-config generate --id 495342db-5046-4ecf-85ea-9ffceb6f8cdf --endpoint https://www-api.ibm.com/ibm-telemetry/v1/metrics --files ./src/components/**/*.(tsx|js|jsx)",
     "test": "jest --colors",
     "//upgrade-dependencies": "# don't upgrade carbon (done globally), react/react-dom (explicit range peer dependency), chalk (issue #1596)",
@@ -90,6 +95,7 @@
     "rollup": "^4.35.0",
     "rollup-plugin-strip-banner": "^3.1.0",
     "sass": "^1.85.1",
+    "storybook": "^8.6.12",
     "typescript-config-carbon": "^0.5.0",
     "yargs": "^17.7.2"
   },
