--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -172,7 +172,7 @@ jobs:
       - name: Run storybook
         id: storybook
         run: |
-          npx serve -l 3000 packages/core/storybook-static &
+          npx serve -l 3000 packages/ibm-products/storybook-static &
           pid=$!
           echo "pid=$pid" >> $GITHUB_OUTPUT
       - uses: ./actions/wait-for-it
@@ -215,7 +215,7 @@ jobs:
           ${{ env.PERCY_TOKEN != '' && github.repository ==
           'carbon-design-system/ibm-products' && github.event.pull_request.draft
           == false }}
-        working-directory: packages/core
+        working-directory: packages/ibm-products
         run: yarn percy storybook storybook-static
 
   avt:
