--- a/packages/ibm-products-web-components/examples/delete-pattern/.gitignore
+++ b/packages/ibm-products-web-components/examples/delete-pattern/.gitignore
@@ -1,25 +1,26 @@
-## editors
-/.idea
-/.vscode
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-## system files
+node_modules
+dist
+dist-ssr
+*.local
+.yarn/*
+yarn.lock
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-
-## npm
-/node_modules/
-/npm-debug.log
-
-## testing
-/coverage/
-
-## temp folders
-/.tmp/
-
-# build
-/_site/
-/dist/
-/out-tsc/
-
-storybook-static
-custom-elements.json
-/.yarn
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
