--- a/packages/ibm-products-web-components/examples/delete-pattern/package.json
+++ b/packages/ibm-products-web-components/examples/delete-pattern/package.json
@@ -17,6 +17,8 @@
     "sass": "^1.87.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.27.1",
     "rimraf": "^3.0.2",
     "vite": "^6.2.3"
   }
