--- a/packages/ibm-products-web-components/examples/delete-pattern/package.json
+++ b/packages/ibm-products-web-components/examples/delete-pattern/package.json
@@ -20,6 +20,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.27.1",
     "rimraf": "^3.0.2",
-    "vite": "^6.2.3"
+    "vite": "^6.2.3",
+    "vite-plugin-babel": "^1.3.1"
   }
 }
