fix: exclude internal from percy

--- a/.percy.yml
+++ b/.percy.yml
@@ -10,6 +10,7 @@ discovery:
 storybook:
   include: ['/IBM Products/']
   exclude: [
+      '/Internal/',
       '/Datagrid/*',
       '/DataSpreadsheet/',
       'Cascade: With Grid',
