--- a/packages/ibm-products-web-components/examples/import-modal/package.json
+++ b/packages/ibm-products-web-components/examples/import-modal/package.json
@@ -12,13 +12,16 @@
     "clean": "rimraf node_modules dist .cache"
   },
   "dependencies": {
-    "@carbon/ibm-products-web-components": "^0.10.0-rc.0",
+    "@carbon/ibm-products-styles": "^2.62.0-rc.0",
+    "@carbon/styles": "1.79.0",
+    "@carbon/web-components": "2.27.1",
     "lit": "^3.2.1",
     "sass": "^1.64.1"
   },
   "devDependencies": {
     "rimraf": "^3.0.2",
     "vite": "5.4.18",
-    "vite-plugin-lit-css": "^2.1.0"
+    "vite-plugin-lit-css": "^2.1.0",
+    "typescript": "^5.5.3"
   }
 }
