--- a/packages/ibm-products-web-components/examples/delete-and-remove/package.json
+++ b/packages/ibm-products-web-components/examples/delete-and-remove/package.json
@@ -8,19 +8,14 @@
   "type": "module",
   "scripts": {
     "build": "vite build",
-    "clean": "rimraf node_modules dist .cache",
     "dev": "vite"
   },
   "dependencies": {
     "@carbon/web-components": "^2.28.0",
-    "lit": "^3.1.4",
-    "sass": "^1.87.0"
+    "lit": "^3.1.4"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-decorators": "^7.27.1",
-    "rimraf": "^3.0.2",
-    "vite": "^6.2.3",
-    "vite-plugin-babel": "^1.3.1"
+    "sass": "^1.87.0",
+    "vite": "^6.2.3"
   }
 }
