--- a/packages/ibm-products-web-components/examples/delete-and-remove/tsconfig.json
+++ b/packages/ibm-products-web-components/examples/delete-and-remove/tsconfig.json
@@ -2,10 +2,9 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "ESNext",
+    "lib": ["DOM", "ES2022"],
     "moduleResolution": "bundler",
     "experimentalDecorators": true, 
-    "emitDecoratorMetadata": true, 
     "useDefineForClassFields": false,
-    "lib": ["DOM", "ES2022"]
   }
 }
