--- a/packages/ibm-products-web-components/examples/delete-and-remove/package.json
+++ b/packages/ibm-products-web-components/examples/delete-and-remove/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "sass": "^1.87.0",
-    "vite": "^6.2.3"
+    "vite": "^6.2.3",
+    "vite-plugin-lit-css": "^2.1.0"
   }
 }
