--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -123,6 +123,7 @@
     "@carbon/ibm-products-styles": "^2.62.0-rc.0",
     "@carbon/telemetry": "^0.1.0",
     "@carbon/utilities": "^0.5.0",
+    "@carbon/utilities-react": "0.7.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
