--- a/config/babel-preset-ibm-cloud-cognitive/package.json
+++ b/config/babel-preset-ibm-cloud-cognitive/package.json
@@ -29,6 +29,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-export-default-from": "^7.25.9",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@babel/plugin-transform-class-static-block": "^7.27.1",
     "@babel/plugin-transform-react-constant-elements": "^7.25.9",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
