--- a/package.json
+++ b/package.json
@@ -85,7 +85,6 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/carbon__layout": "^0.0.3",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
-    "accessibility-checker": "^4.0.2",
     "commander": "^13.0.0",
     "copyfiles": "^2.4.1",
     "cspell": "^8.17.5",
@@ -122,6 +121,7 @@
   "//resolutions:http-signature": "package 'request' deprecated but still used, asks for http-signature ~1.2.0 which indirectly has vulnerabilities",
   "//resolutions:minimist": "https://security.snyk.io/vuln/SNYK-JS-MINIMIST-2429795 (version <=1.2.5)",
   "resolutions": {
+    "accessibility-checker": "4.0.2",
     "body-parser": "2.2.0",
     "braces": "^3.0.3",
     "cross-spawn": "7.0.6",
