--- a/examples/carbon-for-ibm-products/InterstitialScreen/package.json
+++ b/examples/carbon-for-ibm-products/InterstitialScreen/package.json
@@ -6,9 +6,7 @@
     "ibm",
     "ibm-products",
     "component",
-    "interstitialscreen",
-    "interstitial",
-    "screen"
+    "InterstitialScreen"
   ],
   "license": "Apache-2.0",
   "type": "module",
@@ -19,22 +17,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@carbon/ibm-products": "^2.21.0",
+    "@carbon/ibm-products": "^2.65.0",
     "@carbon/react": "^1.60.3",
-    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.70.0"
+    "sass": "^1.77.8"
   },
   "devDependencies": {
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^4.5.3"
+    "@eslint/js": "^9.9.0",
+    "@types/node": "^22.5.0",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "eslint": "^9.9.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "globals": "^15.9.0",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.0.1",
+    "vite": "^5.4.1"
   },
   "browserslist": {
     "production": [
