feat: update lottie web animation example  with latest implementation

--- a/examples/carbon-for-ibm-products/InterstitialScreenWithAnimatedMedia/gallery.config.json
+++ b/examples/carbon-for-ibm-products/InterstitialScreenWithAnimatedMedia/gallery.config.json
@@ -1,11 +1,9 @@
 {
-  "label": "Coachmark-With-Animated-Media",
+  "label": "Interstitial-Screen",
   "package-config": {
     "flags": {
       "component": {
-        "InterstitialScreen": true,
-        "InterstitialScreenView": true,
-        "InterstitialScreenViewModule": true
+        "InterstitialScreen": true
       }
     }
   },
