--- a/examples/carbon-for-ibm-products/InterstitialScreenWithAnimatedMedia/package.json
+++ b/examples/carbon-for-ibm-products/InterstitialScreenWithAnimatedMedia/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "InterstitialScreen-component-example-animated-media",
+  "name": "InterstitialScreen-component-example-with-animated-media",
   "description": "An example showing use of the InterstitialScreen component from the @carbon/ibm-products component library.",
   "keywords": [
     "carbon",
@@ -17,12 +17,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@carbon/ibm-products": "^2.21.0",
+    "@carbon/ibm-products": "^2.65.0",
     "@carbon/react": "^1.60.3",
+    "lottie-web": "^5.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-     "sass": "^1.77.8",
-    "lottie-web": "^5.12.2"
+    "sass": "^1.77.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
