fix: remove defaultprops and add react-is resolution

--- a/examples/carbon-for-ibm-products/Datagrid/package.json
+++ b/examples/carbon-for-ibm-products/Datagrid/package.json
@@ -23,7 +23,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "sass": "^1.70.0",
-		"namor": "1.1.2"
+    "namor": "1.1.2"
   },
   "devDependencies": {
     "@types/react": "^19.1.8",
@@ -34,6 +34,9 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "vite": "^4.5.3"
+  },
+  "resolutions": {
+    "react-is": "^19.0.0"
   },
   "browserslist": {
     "production": [
