--- a/examples/carbon-for-ibm-products/CoachmarkFixed/package.json
+++ b/examples/carbon-for-ibm-products/CoachmarkFixed/package.json
@@ -36,6 +36,9 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "vite": "^4.5.3"
   },
+  "resolutions": {
+    "react-is": "^19.0.0"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
