--- a/examples/carbon-for-ibm-products/CoachmarkWithAnimatedMedia/package.json
+++ b/examples/carbon-for-ibm-products/CoachmarkWithAnimatedMedia/package.json
@@ -24,7 +24,7 @@
     "@carbon/react": "^1.60.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-     "sass": "^1.77.8",
+    "sass": "^1.77.8",
     "lottie-web": "^5.12.2"
   },
   "devDependencies": {
@@ -40,6 +40,9 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
+  },
+  "resolutions": {
+    "react-is": "^19.0.0"
   },
   "browserslist": {
     "production": [
