--- a/examples/carbon-for-ibm-products/InlineTipWithAnimatedMedia/package.json
+++ b/examples/carbon-for-ibm-products/InlineTipWithAnimatedMedia/package.json
@@ -22,7 +22,7 @@
     "@carbon/react": "^1.60.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-     "sass": "^1.77.8",
+    "sass": "^1.77.8",
     "lottie-web": "^5.12.2"
   },
   "devDependencies": {
@@ -38,6 +38,9 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
+  },
+  "resolutions": {
+    "react-is": "^19.0.0"
   },
   "browserslist": {
     "production": [
