--- a/examples/carbon-for-ibm-products/InterstitialScreenView/package.json
+++ b/examples/carbon-for-ibm-products/InterstitialScreenView/package.json
@@ -37,6 +37,9 @@
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
   },
+  "resolutions": {
+    "react-is": "^19.0.0"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
