--- a/examples/carbon-for-ibm-products/InterstitialScreenWithAnimatedMedia/package.json
+++ b/examples/carbon-for-ibm-products/InterstitialScreenWithAnimatedMedia/package.json
@@ -38,6 +38,9 @@
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
   },
+  "resolutions": {
+    "react-is": "^19.0.0"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
