--- a/examples/carbon-for-ibm-products/example-gallery/package.json
+++ b/examples/carbon-for-ibm-products/example-gallery/package.json
@@ -32,6 +32,9 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "vite": "^4.5.3"
   },
+  "resolutions": {
+    "react-is": "^19.0.0"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
