fix: deploy-staging to only build the storybooks

--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -30,7 +30,7 @@ jobs:
         run: yarn install
       - name: Build packages and storybook
         run: |
-          yarn build
+          yarn storybook:build
           yarn storybook-wc:build
 
       # Deploy to staging Github Pages using `gh-pages` package
