--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -103,6 +103,7 @@
     "sass": "^1.85.1",
     "storybook": "^9.0.8",
     "typescript-config-carbon": "^0.5.0",
+    "vite": "^7.0.0",
     "yargs": "^18.0.0"
   },
   "dependencies": {
