chore: remove core package

--- a/package.json
+++ b/package.json
@@ -68,6 +68,13 @@
     "@babel/core": "^7.26.10",
     "@babel/eslint-parser": "^7.26.10",
     "@babel/preset-react": "^7.26.3",
+    "@carbon/grid": "^11.38.0",
+    "@carbon/ibm-products-styles": "^2.67.0-rc.0",
+    "@carbon/layout": "^11.36.0",
+    "@carbon/motion": "^11.30.0",
+    "@carbon/react": "^1.85.1",
+    "@carbon/themes": "^11.55.0",
+    "@carbon/type": "^11.42.0",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/compat": "^1.2.7",
@@ -100,6 +107,7 @@
     "json": "^11.0.0",
     "lerna": "^8.2.1",
     "lint-staged": "^16.0.0",
+    "lottie-web": "^5.13.0",
     "npm-check-updates": "^18.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.5.3",
