refactor(rolldown): add jsx ext to imports, fix unsupported css syntax

--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -69,6 +69,7 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
+    "@carbon/styles": "^1.87.0",
     "@ibm/telemetry-js-config-generator": "^2.0.1",
     "@percy/cli": "^1.31.0",
     "@percy/storybook": "^6.0.4",
@@ -127,7 +128,7 @@
     "@carbon/grid": "^11.38.0",
     "@carbon/layout": "^11.36.0",
     "@carbon/motion": "^11.30.0",
-    "@carbon/react": "^1.85.1",
+    "@carbon/react": "^1.87.0",
     "@carbon/themes": "^11.55.0",
     "@carbon/type": "^11.42.0",
     "react": "^16.8.6 || ^17.0.1 || ^18.2.0 || ^19.0.0",
