fix: add deprecated flags to deprecated components and files

--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -29,3 +29,8 @@ component_management:
 
 ignore:
   - '**/*.deprecated.*'
+  - 'Datagrid/'
+  - 'FilterPanel/'
+  - 'HttpErrors/'
+  - 'Nav/'
+  - 'StatusIndicator/'
