fix: missing folder

--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -30,6 +30,7 @@ component_management:
 ignore:
   - '**/*.deprecated.*'
   - 'Datagrid/'
+  - 'DescriptionList/'
   - 'FilterPanel/'
   - 'HttpErrors/'
   - 'Nav/'
