fix: favor ignoring folders

--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -30,8 +30,18 @@ component_management:
 ignore:
   - '**/*.deprecated.*'
   - 'Datagrid/'
+  - 'DecoratorDualButton/'
+  - 'DecoratorLink/'
+  - 'DecoratorSingleButton/'
   - 'DescriptionList/'
+  - 'EditFullPage/'
+  - 'EditSidePanel/'
+  - 'EditTearsheet/'
+  - 'EditTearsheetNarrow/'
+  - 'EditUpdateCards/'
   - 'FilterPanel/'
+  - 'FilterSummary/'
   - 'HttpErrors/'
   - 'Nav/'
   - 'StatusIndicator/'
+  - 'UserProfileImage/'
