fix: update prettier ignore

--- a/.prettierignore
+++ b/.prettierignore
@@ -5,6 +5,7 @@ es
 lib
 umd
 dist
+examples
 
 # Managed by Lerna - https://github.com/lerna/lerna/tree/main/commands/version#--conventional-commits
 CHANGELOG.md
